--- a/app/src/main/res/values/themes.xml
+++ b/app/src/main/res/values/themes.xml
@@ -1,22 +1,18 @@
 <resources xmlns:tools="http://schemas.android.com/tools">
-    <!-- Base application theme. -->
     <style name="Theme.Crypto" parent="Theme.MaterialComponents.DayNight.NoActionBar">
-        <!-- Primary brand color. -->
         <item name="colorPrimary">@color/green</item>
         <item name="colorPrimaryVariant">@color/green</item>
         <item name="colorOnPrimary">@color/white</item>
-        <!-- Secondary brand color. -->
         <item name="colorSecondary">@color/green</item>
         <item name="colorSecondaryVariant">@color/green</item>
         <item name="colorOnSecondary">@color/black</item>
-        <!-- Status bar color. -->
+        <item name="colorPrimaryDark">@color/gray_for_radio_button</item>
         <item name="android:statusBarColor" tools:targetApi="l">?attr/colorPrimaryVariant</item>
         <item name="android:actionOverflowButtonStyle">@style/MyActionButtonOverflow</item>
-        <!-- Customize your theme here. -->
         <item name="android:alertDialogTheme">@style/AlertDialogTheme</item>
     </style>
 
-    <style name="item_price_textView">
+    <style name="Widget.MaterialComponents.TextView.CoinPrice">
         <item name="android:textColor">@color/black</item>
         <item name="android:textStyle">normal</item>
         <item name="fontFamily">@font/roboto_medium</item>
@@ -24,7 +20,7 @@
         <item name="android:letterSpacing">-0.02</item>
     </style>
 
-    <style name="item_symbol_textView">
+    <style name="Widget.MaterialComponents.TextView.CoinSymbol">
         <item name="android:textColor">@color/black</item>
         <item name="android:textStyle">normal</item>
         <item name="fontFamily">@font/roboto_black</item>
@@ -33,7 +29,7 @@
         <item name="textAllCaps">true</item>
     </style>
 
-    <style name="item_name_textView">
+    <style name="Widget.MaterialComponents.TextView.ItemCoinName">
         <item name="android:textColor">@color/black</item>
         <item name="android:textStyle">normal</item>
         <item name="fontFamily">@font/roboto_thin</item>
@@ -41,11 +37,11 @@
         <item name="android:letterSpacing">-0.02</item>
     </style>
 
-    <style name="toolbar_style">
+    <style name="Widget.MaterialComponents.Toolbar.Crypto">
         <item name="android:background">@color/green</item>
     </style>
 
-    <style name="toolbar_label_text">
+    <style name="Widget.MaterialComponents.TextView.CryptoToolBarText">
         <item name="android:textColor">@color/white</item>
         <item name="android:textStyle">normal</item>
         <item name="android:letterSpacing">0.01</item>
@@ -73,7 +69,7 @@
         <item name="android:textColor">@color/green</item>
     </style>
 
-    <style name="details_screen_price_text">
+    <style name="Widget.MaterialComponents.TextView.DetailsScreenPrice">
         <item name="android:textColor">@color/black</item>
         <item name="android:textStyle">normal</item>
         <item name="android:letterSpacing">-0.01</item>
@@ -81,7 +77,7 @@
         <item name="fontFamily">@font/roboto_medium</item>
     </style>
 
-    <style name="details_screen_price_change_text">
+    <style name="Widget.MaterialComponents.TextView.DetailsScreenPriceChange">
         <item name="android:textColor">@color/green</item>
         <item name="android:textStyle">normal</item>
         <item name="android:letterSpacing">-0.02</item>
@@ -89,7 +85,7 @@
         <item name="fontFamily">@font/roboto_medium</item>
     </style>
 
-    <style name="details_screen_max_and_min_price_text">
+    <style name="Widget.MaterialComponents.TextView.DetailsScreenMinAndMaxPrice">
         <item name="android:textColor">@color/default_gray</item>
         <item name="android:textStyle">normal</item>
         <item name="android:letterSpacing">-0.03</item>
@@ -97,7 +93,7 @@
         <item name="fontFamily">@font/roboto_medium</item>
     </style>
 
-    <style name="details_screen_radio_button">
+    <style name="Widget.Material3.CompoundButton.RadioButton.Crypto">
         <item name="android:layout_width">wrap_content</item>
         <item name="android:layout_height">30dp</item>
         <item name="android:layout_weight">0.2</item>
@@ -111,7 +107,7 @@
         <item name="android:gravity">center</item>
     </style>
 
-    <style name="separation_line_style_details_screen">
+    <style name="SeparationLine">
         <item name="android:layout_width">match_parent</item>
         <item name="android:layout_height">1dp</item>
         <item name="android:background">@color/gray_for_radio_button</item>
@@ -120,7 +116,7 @@
         <item name="android:layout_marginTop">24dp</item>
     </style>
 
-    <style name="market_cap_label_details_screen">
+    <style name="Widget.MaterialComponents.TextView.DetailsScreenMarketCapLabel">
         <item name="android:layout_width">wrap_content</item>
         <item name="android:layout_height">wrap_content</item>
         <item name="android:textColor">@color/black</item>
@@ -132,7 +128,7 @@
         <item name="android:layout_marginTop">24dp</item>
     </style>
 
-    <style name="market_cap_value_details_screen">
+    <style name="Widget.MaterialComponents.TextView.DetailsScreenMarketCapValue">
         <item name="android:textColor">@color/green</item>
         <item name="android:textStyle">normal</item>
         <item name="android:letterSpacing">-0.01</item>
@@ -142,22 +138,13 @@
         <item name="android:layout_marginTop">24dp</item>
     </style>
 
-    <style name="bottom_menu_style">
+    <style name="Widget.MaterialComponents.BottomNavigationView.Crypto">
         <item name="backgroundTint">@color/green</item>
         <item name="itemTextColor">@color/radio_flat_text_selector</item>
         <item name="itemIconTint">@color/radio_flat_text_selector</item>
     </style>
 
-    <style name="text_input_settings">
-        <item name="helperText">@string/text_helper</item>
-        <item name="helperTextTextColor">@color/helper_text_color</item>
-        <item name="marginHorizontal">16dp</item>
-        <item name="counterEnabled">true</item>
-        <item name="counterMaxLength">20</item>
-        <item name="endIconMode">clear_text</item>
-    </style>
-
-    <style name="no_internet_screen_text">
+    <style name="Widget.MaterialComponents.TextView.NoInternetScreen">
         <item name="android:textColor">@color/white</item>
         <item name="android:textStyle">normal</item>
         <item name="android:letterSpacing">0.01</item>
