--- a/app/src/main/res/drawable/try_again_btn.xml
+++ b/app/src/main/res/drawable/try_again_btn.xml
@@ -3,5 +3,5 @@
     android:shape="rectangle" android:padding="10dp">
     <gradient android:angle="-90" android:startColor="@android:color/transparent" android:endColor="@android:color/transparent"/>
     <corners android:radius="15dp"/>
-    <stroke android:color="#FFFFFFFF" android:width="1dp"/>
+    <stroke android:color="@color/white" android:width="1dp"/>
 </shape>
