--- a/app/src/main/res/layout/coins_list_item.xml
+++ b/app/src/main/res/layout/coins_list_item.xml
@@ -1,23 +1,22 @@
 <?xml version="1.0" encoding="utf-8"?>
 <androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
-    xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
     android:padding="16dp">
 
-    <ImageView
-        android:id="@+id/coin_image"
+    <com.google.android.material.imageview.ShapeableImageView
+        android:id="@+id/image_coin"
         android:layout_width="48dp"
         android:layout_height="48dp"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent" />
 
-    <TextView
-        android:id="@+id/coin_price"
-        style="@style/item_price_textView"
-        android:layout_width="110dp"
+    <com.google.android.material.textview.MaterialTextView
+        android:id="@+id/text_coin_price"
+        style="@style/Widget.MaterialComponents.TextView.CoinPrice"
+        android:layout_width="112dp"
         android:singleLine="true"
         android:transitionName="price_main_screen"
         android:gravity="end"
@@ -28,9 +27,9 @@
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintTop_toTopOf="parent" />
 
-    <TextView
-        android:id="@+id/coin_name"
-        style="@style/item_name_textView"
+    <com.google.android.material.textview.MaterialTextView
+        android:id="@+id/text_coin_name"
+        style="@style/Widget.MaterialComponents.TextView.ItemCoinName"
         android:layout_width="100dp"
         android:layout_height="wrap_content"
         android:maxLines="1"
@@ -38,19 +37,19 @@
         android:text="@string/example_name"
         android:layout_marginStart="12dp"
         app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintStart_toEndOf="@+id/coin_image"
-        app:layout_constraintTop_toBottomOf="@+id/coin_symbol" />
+        app:layout_constraintStart_toEndOf="@+id/image_coin"
+        app:layout_constraintTop_toBottomOf="@+id/text_coin_symbol" />
 
-    <TextView
-        android:id="@+id/coin_symbol"
-        style="@style/item_symbol_textView"
+    <com.google.android.material.textview.MaterialTextView
+        android:id="@+id/text_coin_symbol"
+        style="@style/Widget.MaterialComponents.TextView.CoinSymbol"
         android:layout_height="wrap_content"
         android:layout_width="100dp"
         android:maxLines="1"
         android:ellipsize="end"
         android:text="@string/example_symbol"
-        app:layout_constraintBottom_toTopOf="@+id/coin_name"
-        app:layout_constraintStart_toStartOf="@+id/coin_name"
+        app:layout_constraintBottom_toTopOf="@+id/text_coin_name"
+        app:layout_constraintStart_toStartOf="@+id/text_coin_name"
         app:layout_constraintTop_toTopOf="parent" />
 
 </androidx.constraintlayout.widget.ConstraintLayout>
