--- a/app/src/main/res/layout/fragment_splash_screen.xml
+++ b/app/src/main/res/layout/fragment_splash_screen.xml
@@ -6,10 +6,10 @@
     android:layout_height="match_parent"
     tools:context=".views.fragments.splash_screen.SplashScreenFragment">
 
-    <ImageView
-        android:id="@+id/splash_screen_anim"
-        android:layout_width="150dp"
-        android:layout_height="150dp"
+    <com.google.android.material.imageview.ShapeableImageView
+        android:id="@+id/image_splash_screen_anim"
+        android:layout_width="152dp"
+        android:layout_height="152dp"
         android:visibility="gone"
         android:src="@drawable/splash_screen_anim"
         app:layout_constraintBottom_toBottomOf="parent"
