--- a/app/src/main/res/values-night/themes.xml
+++ b/app/src/main/res/values-night/themes.xml
@@ -2,109 +2,13 @@
     <style name="Theme.Crypto" parent="Theme.MaterialComponents.DayNight.NoActionBar">
         <item name="colorPrimary">@color/orange</item>
         <item name="colorPrimaryVariant">@color/orange</item>
-        <item name="colorOnPrimary">@color/black</item>
+        <item name="colorOnPrimary">@color/white</item>
         <item name="colorSecondary">@color/orange</item>
-        <item name="colorSecondaryVariant">@color/orange</item>
-        <item name="colorOnSecondary">@color/black</item>
+        <item name="colorSecondaryVariant">@color/black_transparent</item>
+        <item name="colorOnSecondary">@color/white</item>
         <item name="colorOnSurface">@color/white</item>
         <item name="colorPrimaryDark">@color/gray_for_radio_button</item>
+        <item name="colorButtonNormal">@android:color/transparent</item>
         <item name="android:statusBarColor" tools:targetApi="l">?attr/colorPrimaryVariant</item>
     </style>
-
-    <style name="Widget.MaterialComponents.TextView.CoinPrice">
-        <item name="android:textColor">@color/white</item>
-        <item name="android:textStyle">normal</item>
-        <item name="fontFamily">@font/roboto_medium</item>
-        <item name="android:textSize">18sp</item>
-        <item name="android:letterSpacing">-0.02</item>
-    </style>
-
-    <style name="Widget.MaterialComponents.TextView.CoinSymbol">
-        <item name="android:textColor">@color/white</item>
-        <item name="android:textStyle">normal</item>
-        <item name="fontFamily">@font/roboto_black</item>
-        <item name="android:textSize">18sp</item>
-        <item name="android:letterSpacing">-0.02</item>
-        <item name="textAllCaps">true</item>
-    </style>
-
-    <style name="Widget.MaterialComponents.TextView.ItemCoinName">
-        <item name="android:textColor">@color/white</item>
-        <item name="android:textStyle">normal</item>
-        <item name="fontFamily">@font/roboto_thin</item>
-        <item name="android:textSize">14sp</item>
-        <item name="android:letterSpacing">-0.02</item>
-    </style>
-
-    <style name="Widget.MaterialComponents.BottomNavigationView.Crypto">
-        <item name="backgroundTint">@color/orange</item>
-        <item name="itemTextColor">@color/radio_flat_text_selector_night</item>
-        <item name="itemIconTint">@color/radio_flat_text_selector_night</item>
-    </style>
-
-    <style name="Widget.MaterialComponents.Toolbar.Crypto">
-        <item name="android:background">@color/orange</item>
-    </style>
-
-    <style name="Widget.MaterialComponents.TextView.DetailsScreenPrice">
-        <item name="android:textColor">@color/white</item>
-        <item name="android:textStyle">normal</item>
-        <item name="android:letterSpacing">-0.01</item>
-        <item name="android:textSize">36sp</item>
-        <item name="fontFamily">@font/roboto_medium</item>
-    </style>
-
-    <style name="Widget.MaterialComponents.TextView.DetailsScreenPriceChange">
-        <item name="android:textColor">@color/orange</item>
-        <item name="android:textStyle">normal</item>
-        <item name="android:letterSpacing">-0.02</item>
-        <item name="android:textSize">16sp</item>
-        <item name="fontFamily">@font/roboto_medium</item>
-    </style>
-
-    <style name="SeparationLine">
-        <item name="android:layout_width">match_parent</item>
-        <item name="android:layout_height">1dp</item>
-        <item name="android:background">@color/gray_for_radio_button</item>
-        <item name="android:layout_marginStart">16dp</item>
-        <item name="android:layout_marginEnd">16dp</item>
-        <item name="android:layout_marginTop">24dp</item>
-    </style>
-
-    <style name="Widget.MaterialComponents.TextView.DetailsScreenMarketCapLabel">
-        <item name="android:layout_width">wrap_content</item>
-        <item name="android:layout_height">wrap_content</item>
-        <item name="android:textColor">@color/white</item>
-        <item name="android:textStyle">normal</item>
-        <item name="android:letterSpacing">-0.01</item>
-        <item name="android:textSize">24sp</item>
-        <item name="fontFamily">@font/roboto_medium</item>
-        <item name="android:layout_marginStart">16dp</item>
-        <item name="android:layout_marginTop">24dp</item>
-    </style>
-
-    <style name="Widget.MaterialComponents.TextView.DetailsScreenMarketCapValue">
-        <item name="android:textColor">@color/orange</item>
-        <item name="android:textStyle">normal</item>
-        <item name="android:letterSpacing">-0.01</item>
-        <item name="android:textSize">24sp</item>
-        <item name="fontFamily">@font/roboto_medium</item>
-        <item name="android:layout_marginEnd">16dp</item>
-        <item name="android:layout_marginTop">24dp</item>
-    </style>
-
-    <style name="Widget.Material3.CompoundButton.RadioButton.Crypto">
-        <item name="android:layout_width">wrap_content</item>
-        <item name="android:layout_height">30dp</item>
-        <item name="android:layout_weight">0.2</item>
-        <item name="android:textStyle">normal</item>
-        <item name="fontFamily">@font/roboto_medium</item>
-        <item name="android:letterSpacing">-0.02</item>
-        <item name="android:textSize">16sp</item>
-        <item name="android:textColor">@color/radio_flat_text_selector_night</item>
-        <item name="android:background">@drawable/radio_flat_selector_night</item>
-        <item name="android:button">@android:color/transparent</item>
-        <item name="android:gravity">center</item>
-    </style>
-
 </resources>
