--- a/app/src/main/res/values/themes.xml
+++ b/app/src/main/res/values/themes.xml
@@ -12,7 +12,6 @@
         <item name="colorButtonNormal">@color/white</item>
         <item name="android:statusBarColor" tools:targetApi="l">?attr/colorPrimaryVariant</item>
         <item name="android:actionOverflowButtonStyle">@style/MyActionButtonOverflow</item>
-        <item name="android:alertDialogTheme">@style/AlertDialogTheme</item>
     </style>
 
     <style name="Widget.MaterialComponents.TextView.CoinPrice">
@@ -57,19 +56,21 @@
         <item name="android:background">?android:attr/actionBarItemBackground</item>
     </style>
 
-    <style name="AlertDialogTheme" parent="Theme.MaterialComponents.Light.Dialog.Alert">
-        <item name="android:buttonBarNegativeButtonStyle">@style/NegativeButtonStyle</item>
-        <item name="android:buttonBarPositiveButtonStyle">@style/PositiveButtonStyle</item>
+    <style name="AlertDialogTheme" parent="MaterialAlertDialog.Material3">
+        <item name="buttonBarNegativeButtonStyle">@style/Alert.Button.Negative</item>
+        <item name="buttonBarPositiveButtonStyle">@style/Alert.Button.Positive</item>
         <item name="android:textColorPrimary">?attr/colorOnSecondary</item>
         <item name="android:colorControlActivated">?attr/colorPrimary</item>
     </style>
 
-    <style name="NegativeButtonStyle" parent="Widget.MaterialComponents.Button.TextButton.Dialog">
+    <style name="Alert.Button.Negative" parent="Widget.MaterialComponents.Button.TextButton">
         <item name="android:textColor">?attr/colorControlHighlight</item>
+        <item name="android:textAllCaps">true</item>
     </style>
 
-    <style name="PositiveButtonStyle" parent="Widget.MaterialComponents.Button.TextButton.Dialog">
+    <style name="Alert.Button.Positive" parent="Widget.MaterialComponents.Button.TextButton">
         <item name="android:textColor">?attr/colorPrimary</item>
+        <item name="android:textAllCaps">true</item>
     </style>
 
     <style name="Widget.MaterialComponents.TextView.DetailsScreenPrice">
